@startuml
skinparam monochrome true
skinparam linetype ortho
hide circle
/'hide <<Boundary>> circle
hide <<Controller>> circle    
hide <<Domain>> circle'/

/' i sekvensdiagrammer, brug defines til at skrive
 lange navne '/

class ISensor <<Interface>>
{
    GetTemp(): int
}

class IHeater <<Interface>>
{
    TurnOff(): void
    TurnOn(): void
}

class FakeTempSensor
{
    + GetTemp(): int
    - RunSelfTest(): bool
}

class FakeHeater
{
    + TurnOff(): void
    + TurnOn(): void
    - RunSelfTest(): bool
}

class TempSensor
{
    + GetTemp(): int
    - RunSelfTest(): bool
}

class Heater
{
    + TurnOn(): void
    + TurnOff(): void
    - RunSelfTest(): bool
}

class ECS
{
    - _threshold: int
    - _tempSensor: TempSensor
    - _heater: Heater
    + ECS(int thr, IHeater heater, ISensor sensor)
    + Regulate(): void
    + SetThreshold(int thr): void
    + GetThreshold(): int
    + GetCurTemp(): int
    - RunSelfTest(): void
}

ECS *-- IHeater
ECS *-- ISensor
IHeater <|.. Heater
IHeater <|.. FakeHeater
ISensor <|.. TempSensor
ISensor <|.. FakeTempSensor

@enduml
